--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <center>
         <h3 class="btn btn-warning heading">GESTURE TO EMOJI APP 
           <br>
-          <span>&#128077; </span><span>&#128076; </span><span> &#9996; </span>
+          <span>&#128077;</span><span>&#128076;</span><span>&#9996;</span>
         </h3>
         <br><br>
   
@@ -27,7 +27,7 @@
             <br>
           <b style="color: green">Victory?</b>
           <br>
-          <b style="color: black">Thumbs Up?</b>
+          <b style="color: black">Best?</b>
           <br>
           <b style="color: blue">Amazing?</b>
           <br>
